--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 							<li class="nav-item"><a class="nav-link" href="#about">About</a></li>
 							<li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
 							<li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
-							
+              <li class="nav-item"><a class="nav-link" href="https://client.drop-deluxe.com/login.php">Login</a></li>
+
 
 						</ul>
 					</div>
